# waio-shell

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  mirror-push-to-forgejo.yml  release.yml
adapters/: Cargo.toml
adapters/src/: errors.rs  lib.rs
adapters/src/event_loop/: calloop_adapter.rs  mod.rs
adapters/src/rendering/: mod.rs
adapters/src/rendering/egl/: context.rs
adapters/src/rendering/femtovg/: main_window.rs  popup_window.rs  renderable_window.rs
adapters/src/rendering/slint_integration/: platform.rs
adapters/src/wayland/: config.rs  connection.rs  managed_proxies.rs  mod.rs  shell_adapter.rs
adapters/src/wayland/event_handling/: event_dispatcher.rs  event_macros.rs
adapters/src/wayland/globals/: context.rs
adapters/src/wayland/services/: mod.rs  popup_service.rs
adapters/src/wayland/surfaces/: component_state.rs  dimensions.rs  display_metrics.rs  event_bus.rs  event_context.rs  event_router.rs  interaction_state.rs  layer_surface.rs  mod.rs  popup_builder.rs  popup_coordinator.rs  popup_manager.rs  popup_state.rs  popup_surface.rs  rendering_state.rs  scale_coordinator.rs  surface_builder.rs  surface_state.rs  window_events.rs  window_renderer.rs
composition/: Cargo.toml
composition/src/: builder.rs  lib.rs  system.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: errors.rs  lib.rs
crates/adapters/src/rendering/: mod.rs
crates/adapters/src/rendering/egl/: context.rs  context_factory.rs  mod.rs  render_context_manager.rs
crates/adapters/src/rendering/femtovg/: main_window.rs  mod.rs  popup_window.rs  renderable_window.rs
crates/adapters/src/rendering/slint_integration/: platform.rs
crates/adapters/src/wayland/: config.rs  facade.rs  managed_proxies.rs  mod.rs  ops.rs  outputs.rs  rendering.rs  shell_adapter.rs
crates/adapters/src/wayland/event_handling/: app_dispatcher.rs  event_dispatcher.rs  event_macros.rs  mod.rs
crates/adapters/src/wayland/globals/: context.rs
crates/adapters/src/wayland/input/: keyboard.rs  mod.rs  pointer.rs  state.rs
crates/adapters/src/wayland/outputs/: output_manager.rs
crates/adapters/src/wayland/session_lock/: lock_context.rs  lock_manager.rs  lock_surface.rs  mod.rs
crates/adapters/src/wayland/session_lock/manager/: callbacks.rs  input_handling.rs  lifecycle.rs  mod.rs  rendering.rs  state.rs
crates/adapters/src/wayland/surfaces/: app_state.rs  component_state.rs  dimensions.rs  display_metrics.rs  event_context.rs  keyboard_state.rs  layer_surface.rs  mod.rs  pointer_utils.rs  popup_manager.rs  popup_surface.rs  rendering_state.rs  surface_builder.rs  surface_renderer.rs  surface_state.rs  window_renderer.rs
crates/composition/: Cargo.toml
crates/composition/src/: builder.rs  event_loop.rs  layer_shika.rs  layer_surface.rs  lib.rs  lock_selection.rs  popup_builder.rs  selection.rs  selector.rs  session_lock.rs  shell.rs  shell_composition.rs  shell_config.rs  shell_runtime.rs  slint_callbacks.rs  surface_registry.rs  system.rs  value_conversion.rs
crates/composition/src/popup/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: config.rs  dimensions.rs  errors.rs  prelude.rs  surface_dimensions.rs
crates/domain/src/entities/: component.rs  mod.rs  output_registry.rs  popup_tree.rs  window.rs
crates/domain/src/ports/: shell.rs  windowing.rs
crates/domain/src/value_objects/: anchor.rs  anchor_strategy.rs  dimensions.rs  handle.rs  keyboard_interactivity.rs  layer.rs  lock_config.rs  lock_state.rs  margins.rs  mod.rs  output_handle.rs  output_info.rs  output_policy.rs  output_target.rs  popup_behavior.rs  popup_config.rs  popup_dimensions.rs  popup_position.rs  popup_positioning_mode.rs  popup_request.rs  popup_size.rs  surface_instance_id.rs  ui_source.rs
domain/: Cargo.toml
domain/src/: config.rs  dimensions.rs  errors.rs  lib.rs  prelude.rs  surface_dimensions.rs
domain/src/entities/: surface.rs
domain/src/events/: mod.rs  window_events.rs
domain/src/ports/: windowing.rs
domain/src/value_objects/: dimensions.rs  mod.rs  popup_config.rs  popup_dimensions.rs  popup_request.rs
examples/: README.md
examples/declarative-config/: Cargo.toml  README.md
examples/declarative-config/src/: main.rs
examples/declarative-config/ui/: bar.slint
examples/event-loop/: Cargo.toml  README.md
examples/event-loop/src/: channel.rs  custom_source.rs  timer.rs
examples/event-loop/ui/: demo.slint
examples/multi-surface/: Cargo.toml  README.md
examples/multi-surface/src/: main.rs
examples/multi-surface/ui/: shell.slint
examples/runtime-surface-config/: Cargo.toml  README.md
examples/runtime-surface-config/src/: main.rs
examples/runtime-surface-config/ui/: bar.slint
examples/session-lock/: Cargo.toml  README.md
examples/session-lock-selectors/: Cargo.toml  README.md
examples/session-lock-selectors/src/: main.rs
examples/session-lock-selectors/ui/: lock.slint
examples/session-lock-standalone/: Cargo.toml  README.md
examples/session-lock-standalone/src/: main.rs
examples/session-lock-standalone/ui/: lock.slint
examples/session-lock/src/: main.rs
examples/session-lock/ui/: lock.slint
examples/simple-bar/: Cargo.toml  README.md
examples/simple-bar/src/: main.rs
examples/simple-bar/ui/: bar.slint
examples/simple-popup/: Cargo.toml  README.md
examples/simple-popup/src/: main.rs
examples/simple-popup/ui/: ui.slint
examples/surface-input-region/: Cargo.toml  README.md
examples/surface-input-region/src/: main.rs
examples/surface-input-region/ui/: ui.slint
src/: errors.rs  event.rs  lib.rs  output.rs  prelude.rs  shell.rs  slint_integration.rs  window.rs
src/composition/: Cargo.toml
src/composition/src/: lib.rs  system.rs
src/domain/: Cargo.toml
src/domain/src/: lib.rs  surface_dimensions.rs
src/rendering/: egl_context.rs  femtovg_window.rs  mod.rs  popup_window.rs  slint_platform.rs
src/windowing/: builder.rs  config.rs  globals.rs  mod.rs  popup.rs  popup_manager.rs  proxies.rs  surface.rs  surface_dimensions.rs  system.rs
src/windowing/state/: builder.rs  dispatches.rs  mod.rs
(+13 files in other folders)
