[workspace]
resolver = "2"
members = ["domain", "adapters", "composition"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
disallowed_types = "deny"
disallowed_methods = "deny"
pub_use = "deny"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
panic = "deny"
indexing_slicing = "deny"
exit = "deny"
redundant_clone = "deny"
clone_on_ref_ptr = "deny"
vec_box = "deny"
large_enum_variant = "deny"
await_holding_lock = "deny"
future_not_send = "deny"
cognitive_complexity = "deny"
needless_collect = "deny"
let_underscore_must_use = "deny"
absolute_paths = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"
