[package]
name = "layer-shika"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/waydeer/layer-shika"
rust-version = "1.85"
keywords = ["layer-shell", "wayland", "slint", "femtovg", "smithay"]
categories = ["gui"]
description = "A layer shell library for Wayland with Slint UI integration"
readme = "README.md"

[lints]
workspace = true

[dependencies]
layer-shika-composition = { version = "0.1.0", path = "src/composition" }

[workspace]
resolver = "2"
members = ["src/domain", "src/adapters", "src/composition"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/waydeer/layer-shika"
rust-version = "1.85"
keywords = ["layer-shell", "wayland", "slint", "femtovg", "smithay"]
categories = ["gui"]

[workspace.dependencies]
glutin = { version = "0.32.3", default-features = false, features = [
    "wayland",
] }
spin_on = "0.1"
log = "0.4.28"
raw-window-handle = "0.6.2"
slab = "0.4"
slint = { version = "1.14.1", default-features = false, features = [
    "compat-1-2",
    "renderer-femtovg",
    "backend-winit-wayland",
] }
slint-interpreter = { version = "1.14.1", default-features = false, features = [
    "compat-1-2",
] }
smithay-client-toolkit = "0.20.0"
thiserror = "2.0.17"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }

layer-shika-domain = { version = "0.1.0", path = "src/domain" }
layer-shika-adapters = { version = "0.1.0", path = "src/adapters" }
layer-shika-composition = { version = "0.1.0", path = "src/composition" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
disallowed_types = "deny"
disallowed_methods = "deny"
pub_use = "deny"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
panic = "deny"
indexing_slicing = "deny"
exit = "deny"
redundant_clone = "deny"
clone_on_ref_ptr = "deny"
vec_box = "deny"
large_enum_variant = "deny"
await_holding_lock = "deny"
future_not_send = "deny"
cognitive_complexity = "deny"
needless_collect = "deny"
let_underscore_must_use = "deny"
absolute_paths = "deny"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
uninlined_format_args = "allow"
