[package]
name = "layer-shika"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A layer shell library crate with Slint UI"
readme = "../README.md"

[lints]
workspace = true

[dependencies]
layer-shika-adapters.workspace = true
layer-shika-domain.workspace = true
thiserror.workspace = true
