[package]
name = "waio-shell-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Adapters layer for waio-shell (internal implementation crate)"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
glutin.workspace = true
waio-shell-domain.workspace = true
log = { workspace = true, optional = true }
raw-window-handle.workspace = true
slint.workspace = true
slint-interpreter.workspace = true
smithay-client-toolkit.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
wayland-client.workspace = true
wayland-protocols.workspace = true
xkbcommon.workspace = true

[features]
default = ["log"]
log = ["dep:log"]
tracing = ["dep:tracing"]
