[package]
name = "layer-shika-composition"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Composition layer for layer-shika (internal implementation crate)"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
layer-shika-adapters.workspace = true
layer-shika-domain.workspace = true
log = { workspace = true, optional = true }
spin_on.workspace = true
smithay-client-toolkit.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = ["log"]
log = ["dep:log", "layer-shika-adapters/log"]
tracing = ["dep:tracing", "layer-shika-adapters/tracing"]
