[package]
name = "waio-shell-composition"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Composition layer for waio-shell (internal implementation crate)"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
waio-shell-adapters.workspace = true
waio-shell-domain.workspace = true
log = { workspace = true, optional = true }
spin_on.workspace = true
smithay-client-toolkit.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = ["log"]
log = ["dep:log", "waio-shell-adapters/log"]
tracing = ["dep:tracing", "waio-shell-adapters/tracing"]
