[package]
name = "waio-shell-composition"
version.workspace = true
edition.workspace = true
description = "Composition layer for waio-shell (internal implementation crate)"

[lints]
workspace = true

[dependencies]
waio-shell-adapters.workspace = true
waio-shell-domain.workspace = true
log = { workspace = true, optional = true }
spin_on.workspace = true
smithay-client-toolkit.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
tokio = { version = "1", features = ["sync"] }

[features]
default = ["log"]
log = ["dep:log", "waio-shell-adapters/log"]
tracing = ["dep:tracing", "waio-shell-adapters/tracing"]
