[package]
name = "layer-shika-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Domain layer for layer-shika (internal implementation crate)"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
